# deduplicator

./: .coveragerc  .gitignore  Dockerfile  Pipfile  README.md  delete.sh  go  logging.json  main.py  pyproject.toml  pytest.ini  setup.py  test_main.py
deduplicator/: delete-duplicates.py  files.py  image-results-parse.py  images.py  logger.py  logging.py  main.py  parse.py  results.py  start.py  utils.py
hack/: check-all-images-match-from-wsl.sh  check-images-match-from-wsl.sh  check-random-images-match-from-wsl.sh  check-with-optional-delete.sh  delete-if-contains-old.sh  delete-images.sh  delete-photos.sh  drive-and-home.sh
output/: out.txt
scripts/: README.md  delete.sh
tests/: test_files.py  test_main.py  test_parse.py  test_results.py  test_start.py  test_utils.py
