[tool.poetry]
name = "deduplicator"
version = "0.1.0"
description = "Finds and optionally deletes duplicate files and similar images"
authors = ["Alex M <alex@alexos.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
deduplicator = "deduplicator.main:start"
parse = "deduplicator.image-results-parse:main"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
fuzzywuzzy = "^0.18.0"
ImageHash = "^4.3.1"
python-magic = "^0.4.27"
python-json-logger = "^2.0.7"
python-Levenshtein = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
